update in the index.html and script.js files

--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
             <img src="./assets/excluir.svg" alt="ícone de excluir" />
           </div>
           <div class="key" onclick="operation('+'), show('+')">+</div>
-          <div class="key" onclick="show('-'), operation('-')">-</div>
-          <div class="key" onclick="show('x'), operation('x')">x</div>
-          <div class="key" onclick="show('÷'), operation('÷')">÷</div>
+          <div class="key" onclick="operation('-'), show('-')">-</div>
+          <div class="key" onclick="operation('x'), show('x')">x</div>
+          <div class="key" onclick="operation('÷'), show('÷')">÷</div>
         </div>
       </div>
     </div>
