reconstruction of the script.js file and adaptations in the the index

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -22,33 +22,33 @@
       <div class="keys">
         <div class="column">
           <div class="key">C</div>
-          <div class="key" onclick="takeNumber('1'), show('1')">1</div>
-          <div class="key" onclick="takeNumber('4'), show('4')">4</div>
-          <div class="key" onclick="takeNumber('7'), show('7')">7</div>
+          <div class="key" onclick="show('1')">1</div>
+          <div class="key" onclick="show('4')">4</div>
+          <div class="key" onclick="show('7')">7</div>
           <div class="key">+/-</div>
         </div>
         <div class="column">
           <div class="key"></div>
-          <div class="key" onclick="takeNumber('2'), show('2')">2</div>
-          <div class="key" onclick="takeNumber('5'), show('5')">5</div>
-          <div class="key" onclick="takeNumber('8'), show('8')">8</div>
-          <div class="key" onclick="takeNumber('0'), show('0')">0</div>
+          <div class="key" onclick="show('2')">2</div>
+          <div class="key" onclick="show('5')">5</div>
+          <div class="key" onclick="show('8')">8</div>
+          <div class="key" onclick="show('0')">0</div>
         </div>
         <div class="column">
-          <div class="key" onclick="operation('='), show('=')">=</div>
-          <div class="key" onclick="takeNumber('3'), show('3')">3</div>
-          <div class="key" onclick="takeNumber('6'), show('6')">6</div>
-          <div class="key" onclick="takeNumber('9'), show('9')">9</div>
+          <div class="key" onclick="result()">=</div>
+          <div class="key" onclick="show('3')">3</div>
+          <div class="key" onclick="show('6')">6</div>
+          <div class="key" onclick="show('9')">9</div>
           <div class="key">,</div>
         </div>
         <div class="column">
-          <div class="key" onclick="erase()">
+          <div class="key" onclick="eraseTheLastCharacter()">
             <img src="./assets/excluir.svg" alt="ícone de excluir" />
           </div>
-          <div class="key" onclick="operation('+'), show('+')">+</div>
-          <div class="key" onclick="operation('-'), show('-')">-</div>
-          <div class="key" onclick="operation('x'), show('x')">x</div>
-          <div class="key" onclick="operation('÷'), show('÷')">÷</div>
+          <div class="key" onclick="show('+')">+</div>
+          <div class="key" onclick="show('-')">-</div>
+          <div class="key" onclick="show('x')">x</div>
+          <div class="key" onclick="show('÷')">÷</div>
         </div>
       </div>
     </div>
